--- a/sexshop/appsexshop/templates/crud/subcategorias.html
+++ b/sexshop/appsexshop/templates/crud/subcategorias.html
@@ -139,7 +139,19 @@
     <div class="container-fluid py-4">
       <div class="row">
         <div class="col-12">
-    
+
+          <!-- Mensajes de Django -->
+          {% if messages %}
+            <div>
+              {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% endfor %}
+            </div>
+          {% endif %}
+
           <h4 class="card-title" style="text-align: center; color: black;">Gestión de Sub-Categorias</h4>
   
 <!-- Botón para abrir el modal de creación de subcategoría -->
