--- a/sexshop/appsexshop/templates/login/login.html
+++ b/sexshop/appsexshop/templates/login/login.html
@@ -26,7 +26,13 @@
   <body>
 
   <div class="form-container">
-    <p class="title">Fantasia Intima</p>
+    <p id="login-title" class="title" style="text-align: center; {% if error %}color: #f5365c;{% endif %}">
+      {% if error %}
+        {{ error }}
+      {% else %}
+        Fantasia Intima
+      {% endif %}
+    </p>
     
 
     <!-- Formulario de login -->
@@ -44,9 +50,6 @@
 
       <button type="submit" class="form-btn">Iniciar sesión</button>
 
-      {% if error %}
-        <p style="color:red;">{{ error }}</p>
-      {% endif %}
     </form>
 
     <!-- Enlace para registro -->
@@ -65,9 +68,6 @@
       </svg>
       <span>Iniciar sesión con Google</span>
     </a>
-
   </div>
-
-
   </body>
 </html>
