--- a/sexshop/appsexshop/templates/crud/productos.html
+++ b/sexshop/appsexshop/templates/crud/productos.html
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="{% url 'crudSubCategorias' %}">
+          <a class="nav-link " href="{% url 'listadosubcategorias' %}">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-plus text-danger text-sm opacity-10"></i>
             </div>
