--- a/sexshop/appsexshop/templates/crud/usuarios.html
+++ b/sexshop/appsexshop/templates/crud/usuarios.html
@@ -60,7 +60,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="{% url 'crudSubCategorias' %}">
+          <a class="nav-link " href="{% url 'listadosubcategorias' %}">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-plus text-danger text-sm opacity-10"></i>
             </div>
@@ -214,7 +214,7 @@
   <tbody>
     {% for usuario in page_obj %}
     <tr>
-      <td>{{ forloop.counter }}</td>
+      <td>{{ usuario.IdUsuario }}</td>
       <td>{{ usuario.PrimerNombre }}</td>
       <td>{{ usuario.OtrosNombres }}</td>
       <td>{{ usuario.PrimerApellido }}</td>
@@ -226,7 +226,6 @@
         <button  type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalEditarUsuario{{ usuario.IdUsuario }}">
            Editar
         </button>
-
         <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="{% url 'borrarusuario' usuario.IdUsuario %}">
           <i class="far fa-trash-alt me-2"></i>Eliminar
         </a>
@@ -282,7 +281,7 @@
       </div>
     </div>
     {% endfor %}
-  </tbody>
+</tbody>
 </table>
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
