--- a/sexshop/appsexshop/templates/pedido.html
+++ b/sexshop/appsexshop/templates/pedido.html
@@ -18,8 +18,8 @@
 <nav class="navbar navbar-expand-lg navbar-custom mb-4">
     <div class="container">
         <a href="{% url 'Ladingpage' %}"><i class="fa-solid fa-arrow-left"></i></a>
-        <a class="navbar-brand" href="#" style="margin-left: 2%;">Gestión de Pedidos</a>
-        <div class="collapse navbar-collapse">
+        <span class="navbar-brand d-none d-lg-block" style="margin-left: -16%;">Gestión de Pedidos</span>
+       
             
 
  <!--search bar (barra de busqueda)-->
@@ -33,7 +33,7 @@
   </div>
   
 
-       
+     </div>    
 </nav>
 
 <!-- Contenedor Principal -->
@@ -59,9 +59,6 @@
                 <td>
                     <button class="btn btn-sm" data-toggle="modal" data-target="#pedidoModal" onclick="mostrarDetallesPedido(1)">Ver Detalles</button>
                     <button class="btn btn-sm" onclick="eliminarPedido(1)">Eliminar</button>
-
-
-
                 </td>
             </tr>
             <tr>
