--- a/sexshop/appsexshop/templates/LadingPage.html
+++ b/sexshop/appsexshop/templates/LadingPage.html
@@ -88,8 +88,12 @@
                      <i class="fa-solid fa-user"></i> Bienvenid@, <strong>{{ request.session.username}}</strong>
                  </a>
                  <ul class="dropdown-menu">
+
                      <li><a class="dropdown-item" href="{% url 'perfiles' %}"><i class="fa-solid fa-address-card"></i> Mi Perfil</a></li>
+
                      <li><a class="dropdown-item" href="{% url 'pedido' %}"><i class="fa-solid fa-truck"></i> Historial de Pedidos</a></li>
+
+                      <li><a class="dropdown-item" href="{% url 'pedido' %}"><i class="fa-solid fa-rotate-left"></i> Devoluviones </a></li>
 
                      {% if request.session.role == 1 %}
                      <li><a class="dropdown-item" href="{% url 'listadocategorias' %}"><i class="fa-regular fa-file"></i> Gestiones</a></li>
