--- a/sexshop/appsexshop/static/css/devoluciones.css
+++ b/sexshop/appsexshop/static/css/devoluciones.css
@@ -16,28 +16,28 @@ body {
 
 /* Botones personalizados */
 .btn-primary-custom {
-    background-color: #ff4ccd;
-    border-color: #ff4ccd;
+    background-color: #f5365c;
+    border-color: #f5365c;
     color: white;
     font-weight: 600;
     transition: all 0.3s ease;
 }
 
 .btn-primary-custom:hover {
-    background-color: #ff30c0;
-    border-color: #ff30c0;
+    background-color: #f5365c;
+    border-color: #f5365c;
     color: white;
 }
 
 .btn-primary {
-    background-color: #ff4ccd;
-    border-color: #ff4ccd;
+    background-color: #f5365c;
+    border-color: #f5365c;
     transition: all 0.3s ease;
 }
 
 .btn-primary:hover {
-    background-color: #ff30c0;
-    border-color: #ff30c0;
+    background-color: #f5365c;
+    border-color: #f5365c;
 }
 
 /* Tabla de devoluciones */
@@ -54,7 +54,7 @@ body {
 }
 
 .estado-proceso {
-    color: #dc3545;
+    color: #f5365c;
     font-weight: 600;
 }
 
@@ -65,8 +65,8 @@ body {
 
 /* Botones de acción en devoluciones */
 .btn-ver-solicitud {
-    background-color: #ff4ccd;
-    border-color: #ff4ccd;
+    background-color: #f5365c;
+    border-color:#f5365c;
     color: white;
     font-weight: 500;
     border-radius: 50px;
@@ -74,13 +74,13 @@ body {
 }
 
 .btn-ver-solicitud:hover {
-    background-color: #ff30c0;
-    border-color: #ff30c0;
+    background-color:#f5365c;
+    border-color: #f5365c;
     color: white;
 }
 
 .btn-eliminar {
-    color: #dc3545;
+    color: #f5365c;
     background: none;
     border: none;
     font-size: 1.2rem;
@@ -94,18 +94,18 @@ body {
 
 /* Estilos para el formulario */
 .form-control:focus, .form-select:focus {
-    border-color: #ff4ccd;
+    border-color: #f5365c;
     box-shadow: 0 0 0 0.25rem rgba(255, 76, 205, 0.25);
 }
 
 .form-check-input:checked {
-    background-color: #ff4ccd;
-    border-color: #ff4ccd;
+    background-color: #f5365c;
+    border-color: #f5365c;
 }
 
 /* Enlace términos y condiciones */
 #enlaceTerminos {
-    color: #ff4ccd;
+    color: #f5365c;
     text-decoration: none;
 }
 
