--- a/sexshop/appsexshop/templates/pedidos/devoluciones.html
+++ b/sexshop/appsexshop/templates/pedidos/devoluciones.html
@@ -233,7 +233,7 @@
                     <div class="alert alert-info w-100 mb-0">
                         Tu solicitud está en proceso.
                     </div>
-                    <button type="button" class="btn btn-secondary mt-2" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-secondary mt-2" data-bs-dismiss="modal" style="background-color: #f5365c;">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -243,6 +243,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
-    <script src="{% static 'js/devoluciones.js' %}"></script>
+    <script src="{% static 'js/pedidos/devoluciones.js' %}"></script>
 </body>
 </html>
