--- a/sexshop/appsexshop/templates/pedidos/devoluciones.html
+++ b/sexshop/appsexshop/templates/pedidos/devoluciones.html
@@ -18,12 +18,19 @@
         <div class="card shadow">
             <div class="card-header bg-white py-3">
                 <div class="d-flex align-items-center">
-                    <a href="#" class="text-dark me-3"><i class="fas fa-arrow-left"></i></a>
+                    <a href="{% url 'Ladingpage' %}" class="text-dark me-3"><i class="fas fa-arrow-left"></i></a>
                     <h2 class="card-title mb-0 text-center flex-grow-1">Gestiona Tu Devolución</h2>
                 </div>
-                <div class="input-group mt-3">
-                    <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar">
-                </div>
+
+              <div class="group" id="search-group">
+    <svg viewBox="0 0 24 24" aria-hidden="true" class="search-icon">
+      <g>
+        <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
+      </g>
+    </svg>
+    <input id="query" class="input" type="search" placeholder="Buscar Devolucion" name="searchbar">
+  </div>
+
             </div>
             <div class="card-body">
                 <p class="text-center fw-bold">"Aquí puedes ver el estado de tus devoluciones y gestionar tus solicitudes."</p>
@@ -89,7 +96,7 @@
                                 <option value="dañado">Producto dañado en tránsito</option>
                                 <option value="equivocado">Producto equivocado</option>
                                 <option value="incompleto">Pedido incompleto</option>
-                                <option value="arrepentimiento">Ya no lo necesito</option>
+                               
                                 <option value="otro">Otro motivo</option>
                             </select>
                             <div class="invalid-feedback">
