actualice el color de la tabla del historial de pedidos

--- a/sexshop/appsexshop/templates/pedido.html
+++ b/sexshop/appsexshop/templates/pedido.html
@@ -41,7 +41,7 @@
     <h2> <center>Pedidos Realizados</center> </h2>
 
     <table class="table table-bordered table-hover">
-        <thead class="thead-dark">
+        <thead class="thead">
             <tr>
                 <th>ID Pedido</th>
                 <th>Cliente</th>
@@ -77,7 +77,7 @@
     </table>
 
     <div id="noResults" style="text-align:center; margin-top:10px; display:none;">
-    No se encuentra ningún resultado.
+    No se encontro ningún resultado.
 </div>
 
 </div>
