--- a/sexshop/appsexshop/static/css/pedido.css
+++ b/sexshop/appsexshop/static/css/pedido.css
@@ -38,8 +38,8 @@
   }
 
   thead{
-      background-color:#f5365c;
-      color: rgb(255, 255, 255);
+      background-color:#00000015;
+      color: rgb(0, 0, 0);
   }
 
 
